--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Fitness
         <h2 class="header-card-one-title">500+</h2>
         <p class="header-card-one-desc">Free Workout Videos</p>
     </div>
-    <img src="images/Images 2.png" alt="">
+    <img src="images/images 2.png" alt="">
     <div class="header-card-two">
         <div class="span"></div>
         <div class="header-card-two-text">
