--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
+
 </head>
 <body>
     
@@ -30,7 +32,7 @@ Fitness
 <div class="header-container">
 
     <div class="header-text">
-        <h1 class="header-text-title">Get body in <br>  shape & stay <br> healthy </h1>
+        <h1 class="header-text-title">Get body in <br> <span class="shape">shape</span> & stay <br> healthy </h1>
         <p class="header-text-desc">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit! </p>
 
     <button class="btn">Join Club Now </button>
@@ -119,7 +121,7 @@ Fitness
         <button class="btn">Join Now</button>
     </div>
     <div class="run-image">
-        <img src="images/run.jpg" alt="">
+        
     </div>
 </section>
 
