--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Fitness
         <button class="btn">Join Now</button>
     </div>
     <div class="run-image">
-        
+        <img src="images/run.jpg" alt="">
     </div>
 </section>
 
