--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ Fitness
         <h2 class="header-card-one-title">500+</h2>
         <p class="header-card-one-desc">Free Workout Videos</p>
     </div>
-    <img src="images/Images 2.png" alt="fitness">
+    <img src="images/images 1.png" alt="fitness">
     <div class="header-card-two">
-        <div class="span"></div>
+        <div class="span"></div> 
         <div class="header-card-two-text">
             <h3 class="card-two-tilte">350+</h3>
             <p class="card-two-desc">Video tutorial</p>
