--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fitness Website</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 <body>
@@ -26,6 +27,9 @@ Fitness
         <li><a href="">Contact</a></li>
         <li><a href="">About</a></li>
     </ul>
+
+    <i class="fa-solid fa-bars kahini"></i>
+    
    </nav>
 
 
