--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
+<link rel="shortcut icon" href="images/tab icon.png" type="image/x-icon">
 </head>
 <body>
     
@@ -129,6 +129,68 @@ Fitness
     </div>
 </section>
 
+
+
+
+<section id="calculate">
+
+  
+    <div class="calculate-text">
+        <h1 class="calculate-title">BMI Calculator</h1>
+        <p class="calculate-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+    </div>
+
+    <div class="box-container">
+
+    <div class="calculate-box">
+        <div class="calculate-chart">
+            <h3 class="chart-title">BMI Calculator Chart</h3>
+            <table>
+                <tr>
+                    <th>BMI</th>
+                    <th>Weight Status</th>
+                </tr>
+                <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                </tr>
+                <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                </tr>
+                <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                </tr>
+                <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                </tr>
+            </table>
+
+        </div>
+        <div class="calculate-input">
+            <h3 class="input-title">Calculate your BMI</h3>
+            <p class="input-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+
+            <div class="input-field">
+                <input placeholder="Height/cm" type="text">
+                <input placeholder="Weight/kg" type="text">
+                <input placeholder="Age" type="text">
+                <select name="sex" id="sex">
+                    <option value="Sex">Sex</option>
+                </select>
+                <select name="factor" id="factor">
+                    <option value="Select an activity factor">Select an activity factor</option>
+                </select>
+                
+            </div>
+            <button class="btn input">Calculate</button>
+        </div>
+    </div>
+</div> 
+
+</section>
 
 
 <section id="teams">
