added new section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,54 @@ Fitness
 
 
 
+<section id="join">
+
+   <h1 class="join-title">Reasons to Join</h1>
+<div class="join-box-container">
+
+<div class="flex-first">
+    <div class="join-box">
+        <i class="fa-solid fa-person-running join"></i>
+    <div class="join-box-text">
+        <h4 class="join-box-title">15000 sq.m.</h4>
+        <p class="join-box-desc">A spacious gym for sports – a safe distance between exercise machines</p>
+    </div>
+    </div>
+
+    <div class="join-box">
+        <i class="fa-solid fa-sliders join"></i>
+    <div class="join-box-text">
+        <h4 class="join-box-title">More than 200 equipment</h4>
+        <p class="join-box-desc">No queues at the simulators. Premium equipment from LifeStyle, Hammer Strength, TechnoGym.</p>
+    </div>
+    </div>
+</div>
+
+<div class="flex-second">
+    <div class="join-box">
+        <i class="fa-brands fa-squarespace join"></i>
+    <div class="join-box-text">
+        <h4 class="join-box-title">4 fitness zones<h4>
+        <p class="join-box-desc">From cardio to functional and cycle. Separate area for boxing and mixed martial arts</p>
+    </div>
+    </div>
+
+    <div class="join-box">
+        <i class="fa-solid fa-clock join"></i>
+    <div class="join-box-text">
+        <h4 class="join-box-title">Round-the-clock operation</h4>
+        <p class="join-box-desc">The gym is open 24 hours a day, also works on all holidays and weekends</p>
+    </div>
+    </div>
+
+</div>
+
+</section>
+
+
+
+
+
 <section id="run">
     <div class="run-text">
         <h1 class="run-text-title">Run an Extra <br> Mile Easily</h1>
